k8s/02-task-service-configured.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-service
  namespace: node-micro
  labels:
    app: task-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-service
  template:
    metadata:
      labels:
        app: task-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: task-service
          image: ghcr.io/karl-george/task-service:1.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
          readinessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          resources:
            requests:
              memory: '256Mi'
              cpu: '250m'
            limits:
              memory: '512Mi'
              cpu: '1'

---
apiVersion: v1
kind: Service
metadata:
  name: task-service
  namespace: node-micro
spec:
  selector:
    app: task-service
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
