k8s/03-frontend-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-service
  namespace: node-micro
  labels:
    app: frontend-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-service
  template:
    metadata:
      labels:
        app: frontend-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: frontend-service
          image: ghcr.io/karl-george/frontend-service:1.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5173
          resources:
            requests:
              memory: '256Mi'
              cpu: '250m'
            limits:
              memory: '512Mi'
              cpu: '1'

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: node-micro
spec:
  selector:
    app: frontend-service
  ports:
    - port: 5173
      targetPort: 5173
  type: ClusterIP
